--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
-.App {
+#root {
+  max-width: 1480px;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.graph-input{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  margin-bottom: 30px;
+  position: relative;
+  .icon-wrapper {
+    position: absolute;
+    height: 100%;
+    width: 35px;
+    justify-content: center;
+    color:  #495057;
+    right: 0;
+    top: 0;
+    display: flex;
+    align-items: center;
+    svg {
+      color: #6c757d;
+    }
+  }
 }
 
-.App-link {
-  color: #61dafb;
-}
+.graph-input-inner {
+  width: 100%;
+  padding: .375rem .75rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5 ;
+  color:  #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #dee2e6;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+  box-shadow:inset 0 1px 2px rgba(0, 0, 0, 0.075);
+
+  &:focus {
+    color: #495057;
+    background-color: #fff;;
+    border-color: lighten(#0d6efd, 25%);
+    outline: 0;
+    box-shadow: 0 0 0 .2rem rgba(#0d6efd, .25) !;
   }
-  to {
-    transform: rotate(360deg);
+  &::placeholder {
+    color: #6c757d;
+    opacity: 1;
   }
+
 }
